# SeaBreeze

./: .gitmodules  Add_OBP_Feature_README.rtf  CMakeLists.txt  README.txt  ReadMe.md
sample-code/c/: CMakeLists.txt  demo-averaging.c  demo-named-spectrometer.c  demo-pthreads.c  demo-qepro-api.c  demo-raw-usb-seabreezeapi.c  demo-raw-usb.c  demo-stability-scan.c  demo-streaming-xml.c  demo-strobe-sts.c  demo-strobe.c  demo-sts-api.c  demo-sts-eeprom.c  demo-timeout.c  demo-timing.c  demo-unformatted-spectrum.c  seabreeze-util.c  serial-sts-demo.c  util.c  util.h
sample-code/c/demo_util_lib/: CMakeLists.txt  util.c
sample-code/cpp/: CMakeLists.txt  data-collection.cpp  util.cpp  util.h
sample-code/cpp/demo_util_lib/: CMakeLists.txt
src/: CMakeLists.txt
src/api/: DeviceFactory.cpp  SeaBreezeWrapper.cpp
src/api/seabreezeapi/: AcquisitionDelayFeatureAdapter.cpp  ContinuousStrobeFeatureAdapter.cpp  DHCPServerFeatureAdapter.cpp  DataBufferFeatureAdapter.cpp  DeviceAdapter.cpp  EEPROMFeatureAdapter.cpp  EthernetConfigurationFeatureAdapter.cpp  FastBufferFeatureAdapter.cpp  FeatureFamilies.cpp  I2CMasterFeatureAdapter.cpp  IPv4FeatureAdapter.cpp  IntrospectionFeatureAdapter.cpp  IrradCalFeatureAdapter.cpp  LightSourceFeatureAdapter.cpp  MulticastFeatureAdapter.cpp  NetworkConfigurationFeatureAdapter.cpp  NonlinearityCoeffsFeatureAdapter.cpp  OpticalBenchFeatureAdapter.cpp  ProtocolFamilies.cpp  RawUSBBusAccessFeatureAdapter.cpp  RevisionFeatureAdapter.cpp  SeaBreezeAPI.cpp  SeaBreezeAPI_Impl.cpp  SerialNumberFeatureAdapter.cpp  ShutterFeatureAdapter.cpp  SpectrometerFeatureAdapter.cpp  SpectrumProcessingFeatureAdapter.cpp  StrayLightCoeffsFeatureAdapter.cpp  StrobeLampFeatureAdapter.cpp  TemperatureFeatureAdapter.cpp  ThermoElectricCoolerFeatureAdapter.cpp  WifiConfigurationFeatureAdapter.cpp  gpioFeatureAdapter.cpp
src/common/: ByteVector.cpp  Data.cpp  DoubleVector.cpp  FloatVector.cpp  Log.cpp  U32Vector.cpp  UShortVector.cpp  UnitDescriptor.cpp
src/common/buses/: Bus.cpp  BusFamilies.cpp  BusFamily.cpp  DeviceLocationProberInterface.cpp  TransferHelper.cpp
src/common/buses/network/: IPv4NetworkProtocol.cpp  IPv4SocketDeviceLocator.cpp  TCPIPv4SocketBus.cpp  TCPIPv4SocketBusInterface.cpp  TCPIPv4SocketTransferHelper.cpp
src/common/buses/rs232/: RS232DeviceLocator.cpp  RS232Interface.cpp  RS232TransferHelper.cpp
src/common/buses/usb/: USBDeviceLocator.cpp  USBInterface.cpp  USBTransferHelper.cpp
src/common/devices/: Device.cpp
src/common/exceptions/: BusConnectException.cpp  BusException.cpp  BusTransferException.cpp  FeatureControlException.cpp  FeatureException.cpp  FeatureProtocolNotFoundException.cpp  IllegalArgumentException.cpp  NumberFormatException.cpp  ProtocolBusMismatchException.cpp  ProtocolException.cpp  ProtocolFormatException.cpp  ProtocolTransactionException.cpp
src/common/features/: Feature.cpp  FeatureFamily.cpp  FeatureImpl.cpp
src/common/protocols/: Exchange.cpp  Protocol.cpp  ProtocolFamily.cpp  ProtocolHelper.cpp  ProtocolHint.cpp  Transaction.cpp  Transfer.cpp
src/exceptions/: BusConnectException.cpp  BusException.cpp  BusTransferException.cpp  CMakeLists.txt  FeatureControlException.cpp  FeatureException.cpp  FeatureProtocolNotFoundException.cpp  IllegalArgumentException.cpp  NumberFormatException.cpp  ProtocolBusMismatchException.cpp  ProtocolException.cpp  ProtocolFormatException.cpp  ProtocolTransactionException.cpp
src/main/: CMakeLists.txt
src/main/api/: DeviceFactory.cpp  SeaBreezeWrapper.cpp
src/main/api/seabreezeapi/: AcquisitionDelayFeatureAdapter.cpp  ContinuousStrobeFeatureAdapter.cpp  DHCPServerFeatureAdapter.cpp  DataBufferFeatureAdapter.cpp  DeviceAdapter.cpp  EEPROMFeatureAdapter.cpp  EthernetConfigurationFeatureAdapter.cpp  FastBufferFeatureAdapter.cpp  FeatureFamilies.cpp  I2CMasterFeatureAdapter.cpp  IPv4FeatureAdapter.cpp  IntrospectionFeatureAdapter.cpp  IrradCalFeatureAdapter.cpp  LightSourceFeatureAdapter.cpp  MulticastFeatureAdapter.cpp  NetworkConfigurationFeatureAdapter.cpp  NonlinearityCoeffsFeatureAdapter.cpp  OpticalBenchFeatureAdapter.cpp  PixelBinningFeatureAdapter.cpp  ProtocolFamilies.cpp  RawUSBBusAccessFeatureAdapter.cpp  RevisionFeatureAdapter.cpp  SeaBreezeAPI.cpp  SeaBreezeAPI_Impl.cpp  SerialNumberFeatureAdapter.cpp  ShutterFeatureAdapter.cpp  SpectrometerFeatureAdapter.cpp  SpectrumProcessingFeatureAdapter.cpp  StrayLightCoeffsFeatureAdapter.cpp  StrobeLampFeatureAdapter.cpp  TemperatureFeatureAdapter.cpp  ThermoElectricCoolerFeatureAdapter.cpp  WifiConfigurationFeatureAdapter.cpp  gpioFeatureAdapter.cpp
src/main/common/: ByteVector.cpp  Data.cpp  DoubleVector.cpp  FloatVector.cpp  Log.cpp  U32Vector.cpp  UShortVector.cpp  UnitDescriptor.cpp
src/main/common/buses/: Bus.cpp  BusFamilies.cpp  BusFamily.cpp  DeviceLocationProberInterface.cpp  TransferHelper.cpp
src/main/common/devices/: Device.cpp
src/main/common/features/: FeatureFamily.cpp  FeatureImpl.cpp
src/main/common/protocols/: Exchange.cpp  Protocol.cpp  ProtocolFamily.cpp  ProtocolHelper.cpp  ProtocolHint.cpp  Transaction.cpp  Transfer.cpp
src/native/: CMakeLists.txt
src/native/network/: CMakeLists.txt  Inet4Address.cpp  Socket.cpp  SocketException.cpp  SocketTimeoutException.cpp  UnknownHostException.cpp
src/native/network/posix/: CMakeLists.txt  NativeSocketPOSIX.c  NativeSocketPOSIX.cpp
src/native/rs232/: CMakeLists.txt  RS232.cpp
src/native/system/: CMakeLists.txt  System.cpp
src/native/usb/: CMakeLists.txt  USB.cpp  USBDiscovery.cpp
src/native/usb/linux/: CMakeLists.txt  (+1 more)
test/: CMakeLists.txt  api_test.c  seabreeze_test_posix.c  seabreeze_test_windows.c  spectral_correction.c
test/VisualStudio2015/FlameX_SeaBreeze_Command_Test/: FlameTestClass.cs  FlameX_SeaBreeze_Command_Test.csproj  FlameX_SeaBreeze_Test.Designer.cs  FlameX_SeaBreeze_Test.cs  Program.cs  QEPROTestClass.cs  STSTestClass.cs  SeaBreezeSpectrometerClass.cs  SeaBreezeWrapper.cs  TestClass.cs
test/VisualStudio2015/windows_api_test/: stdafx.cpp  targetver.h  windows_api_test.cpp  windows_api_test.vcxproj  windows_api_test.vcxproj.filters
(+2371 files in other folders)
