file(GLOB COMMON_SOURCE_CXX_FILES_NATIVE_SYSTEM "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
file(GLOB SOURCE_CXX_FILES_NATIVE_SYSTEM "${CMAKE_CURRENT_SOURCE_DIR}/${PLATFORM_DIR}/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/${PLATFORM_DIR}/*.c")
add_library(SeaBreezeNativeSystem SHARED ${COMMON_SOURCE_CXX_FILES_NATIVE_SYSTEM} ${SOURCE_CXX_FILES_NATIVE_SYSTEM})
target_link_libraries(SeaBreezeNativeSystem PRIVATE ${LIBS_TO_LINK} SeaBreezeNativeUSB)
target_compile_definitions(SeaBreezeNativeSystem PRIVATE "-DBUILD_DLL")
target_include_directories(SeaBreezeNativeSystem PUBLIC ${INCLUDE_DIR})

if(WIN32)
	target_link_libraries(SeaBreezeNativeSystem PRIVATE "-lws2_32")
endif()
