if(APPLE)
	set(PLATFORM_DIR_USB "osx")
elseif(UNIX)
	set(PLATFORM_DIR_USB "linux")
endif()
if(WIN32)
	set(PLATFORM_DIR_USB "winusb")
endif()

file(GLOB SOURCE_CXX_FILES_NATIVE_USB "${CMAKE_CURRENT_SOURCE_DIR}/${PLATFORM_DIR_USB}/*.c")
file(GLOB COMMON_SOURCE_CXX_FILES_NATIVE_USB "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

add_library(SeaBreezeNativeUSB SHARED ${SOURCE_CXX_FILES_NATIVE_USB} ${COMMON_SOURCE_CXX_FILES_NATIVE_USB})
target_link_libraries(SeaBreezeNativeUSB PRIVATE ${LIBS_TO_LINK})
if(APPLE)
elseif(UNIX)
	target_link_libraries(SeaBreezeNativeUSB PRIVATE usb ${CMAKE_THREAD_LIBS_INIT})
elseif(WIN32)
	target_link_libraries(SeaBreezeNativeUSB PRIVATE "-lwinusb" "-lsetupapi")
endif()
target_compile_definitions(SeaBreezeNativeUSB PRIVATE "-DBUILD_DLL")
target_include_directories(SeaBreezeNativeUSB PUBLIC ${INCLUDE_DIR})
